--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -43,6 +43,10 @@ default.button.update.label=Update
 default.button.delete.label=Delete
 default.button.delete.confirm.message=Are you sure?
 
+# add default LocalDate and LocalDateTimeFormat
+default.localDate.format=dd-MM-yyyy
+default.localDateTime.format=dd-MM-yyyy HH.mm
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
