more fun and games with bootsrap and fields plugin

--- a/grails-app/i18n/messages.properties
+++ b/grails-app/i18n/messages.properties
@@ -47,6 +47,11 @@ default.button.delete.confirm.message=Are you sure?
 default.localDate.format=dd-MM-yyyy
 default.localDateTime.format=dd-MM-yyyy HH.mm
 
+default.noSelection=- Select -
+default.yesno.true=Yes
+default.yesno.false=No
+
+
 # Data binding errors. Use "typeMismatch.$className.$propertyName to customize (eg typeMismatch.Book.author)
 typeMismatch.java.net.URL=Property {0} must be a valid URL
 typeMismatch.java.net.URI=Property {0} must be a valid URI
